--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,3 +52,6 @@ layout: default
       </div>
     </div>
   </div>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+</script>
