--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,10 @@
   {% include scripts.html %}
 
   {% include google-analytics.html %}
+  
+  {% if page.katex %}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css" />
+  {% endif %}
 
 </body>
 
